:fire: Removing WebDriverManager dependency